# japancode

./: .gitignore  README.md  pyproject.toml
japancode/: __init__.py  region.py  utils.py
japancode/codes/: isocode.py  jiscode.py  lgcode.py
japancode/data/: municipalities.json  prefectures.json
japancode/names/: __init__.py  kana_roman.py
